--- a/modules/1237/pages/images9-10.adoc
+++ b/modules/1237/pages/images9-10.adoc
@@ -1,4 +1,4 @@
-= Document 5: Cammer Rescript and Collection Order (Land Expansion of Colon Krückeberg Nr. 10)
+= Document 5: Cammer Directive and Collection Order (Octoboer 27, 1800)
 :page-role: wide
 
 image::09-right-page.png[link=self]
