--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -2,8 +2,9 @@
 
 NOTE: This timeline is not yet complete. It needs to be revised.
 
-It takes a year and half until a decision is made on Jobst Heinrich's request to enlarge his garden and farmyard.
-During this time, two governmental bodies, the *Cammer* and the *Amt*, interact and six documents are generated.
+Jobst Heinrich Krückeberg had to wait a year and a half for appproval of his request to enlarge his garden and farmyard.
+During this time, two governmental bodies, the local *Amt* and the higher state-level *Cammer*, interact and six documents
+are generated.
 
 == Difference Between the Cammer and the Amt
 
