--- a/modules/1237/pages/index.adoc
+++ b/modules/1237/pages/index.adoc
@@ -2,7 +2,7 @@
 
 Document NLA BU, K 2, A Nr. 1237
 
-"Jobst Heinrich’s Petition to Enlarge Farmyard and Garden: has call number
+Jobst Heinrich’s Petition to Enlarge Farmyard and Garden: has call number
 link:https://www.arcinsys.niedersachsen.de/arcinsys/detailAction?detailid=v4978766[NLA BU, K 2, A Nr. 1237] in the Arcinsys catalog 
 system of the Lower Saxony Archives.
 
