--- a/modules/1237/pages/images3-4-report-and-response.adoc
+++ b/modules/1237/pages/images3-4-report-and-response.adoc
@@ -1,4 +1,4 @@
-= Land Assignment Report for Jobst Heinrich Krückeberg and Its Official Response
+= Land Assignment Report for Jobst Heinrich Krückeberg
 :page-role: wide
 
 == Land Assignment Report
