--- a/modules/1237/pages/images3-4-report-and-response.adoc
+++ b/modules/1237/pages/images3-4-report-and-response.adoc
@@ -1,5 +1,5 @@
 = Land Assignment Report for Jobst Heinrich Krückeberg and Its Official Response
-:page-role: wide
+//:page-role: wide
 
 == Land Assignment Report
 
