--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -4,9 +4,14 @@
 * xref:timeline.adoc[]
 * xref:image1.adoc[]
 * xref:image2-overview.adoc[]
-** xref:image2-petition.adoc[]
-** xref:image2-forestry-assessment.adoc[]
-** xref:image2-admin-note.adoc[]
+** xref:image2-full.adoc[Full Document View]
+** xref:image2-structure.adoc[Breakdown: Petition, Forestry, Note]
+*** xref:image2-petition.adoc[]
+*** xref:image2-forestry-assessment.adoc[]
+*** xref:image2-admin-note.adoc[]
+//** xref:image2-petition.adoc[]
+//** xref:image2-forestry-assessment.adoc[]
+//** xref:image2-admin-note.adoc[]
 * xref:image3-overview.adoc[] 
 ** xref:images3-4-report-and-response.adoc[]
 * xref:image5-left-page.adoc[]
