--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,4 +1,5 @@
-= Niedersächisches Landesarchiv Bückeburg Dossiers
+= = Investigating Ancestral Case Files: Krückeberg Documents from the Bückeburg Archives
+ Dossiers
 
 This site documents the transcription, translation, and historical analysis of archival case files related to the
 Krückeberg family of Berenbusch, Schaumburg-Lippe. The materials span from the early 18th century—including a 1725
@@ -23,21 +24,21 @@ family.
 
 These are the case files examined on this website:
 
-.Case Files/Dossiers
+.Niedersächisches Landesarchiv, Bückeburg (Lower Saxony State Archives in Bückeburg) Case Files/Dossiers
 [cols="2,6,6,2"]
 |===
 |Identifier|Denotation|Translation|Life Span
 
-|NLA BU, K 2, A Nr. 1237
+|link:https://www.arcinsys.niedersachsen.de/arcinsys/detailAction?detailid=v4978766[NLA BU, K 2, A Nr. 1237]
 |Die dem Colon Krückeberg Nr. 10 zu Berenbusch ausgewiesenen Plätze zur Vergrößerung seines Hofraumes und Garten
 |The plots allocated to the colonist Krückeberg No. 10 in Berenbusch for the enlargement of his farmyard and garden.*
 |1798 - 1800
 
-|NLA BU, K 2, A Nr. 689
+|link:https://www.arcinsys.niedersachsen.de/arcinsys/detailAction?detailid=v4988863[NLA BU, K 2, A Nr. 689]
 |Ein dem Colon Krückeberg Nr. 10 in Berenbusch aus Kammerkasse dargeliehenes Kapital von 200 Reichstaler Crt.
 |A capital loan of 200 Reichstaler currency lent from the chamber treasury to the colonist Krückeberg No. 10 in Berenbusch.|1841 - 1845
 
-|NLA BU, L 122, F Nr. 354
+|link:https://www.arcinsys.niedersachsen.de/arcinsys/detailAction?detailid=v7832436[NLA BU, L 122, F Nr. 354]
 |Konkurs des Jobst Krückeberg [in Bückeburg]
 |Bankruptcy of Jobst Krückeberg [in Bückeburg]
 |1725 - 1725
