--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,4 +1,4 @@
-= = Investigating Ancestral Case Files: Krückeberg Documents from the Bückeburg Archives
+= Ancestral Case Files: Krückeberg Documents from the Bückeburg Archives
  Dossiers
 
 This site documents the transcription, translation, and historical analysis of archival case files related to the
