--- a/modules/1237/pages/cover.adoc
+++ b/modules/1237/pages/cover.adoc
@@ -1,7 +1,7 @@
 = Case File Cover
 :page-role: wide
 
-This is the cardboard-like folder containg six documents and document index of case file concerning:
+This is the cardboard-like folder containg six documents and document index of the case file concerning:
 
 [quote]
 the plots assigned to Colon (tenant farmer) Krückeberg, No. 10, in Berenbusch,  
