--- a/modules/1237/pages/cover.adoc
+++ b/modules/1237/pages/cover.adoc
@@ -20,7 +20,7 @@ NOTE: *"Ger."* appears to be the intended abbreviation for *“Gericht”*; a st
 ____
 Ausweisungen & Rottländereien
 Specia
-bim Amt Buckeburg
+bim Amt Bückeburg
 
 Berenbusch no. 10
 
