--- a/modules/1237/pages/image2-overview.adoc
+++ b/modules/1237/pages/image2-overview.adoc
@@ -4,26 +4,26 @@ Jobst Heinrich Krückeberg likely submitted his request in person to the Amt (lo
 before 29 May 1798. We know this because the xref:image1.adoc[Document Index] records May 29, 1798, as the date of
 the "Petition of tenant farmer Krückeberg No. 10 in Berenbusch".
 
-A clerk named Lindemann formally composed or transcribed Jobst Heinrich Krückeberg’s petition onto official paper.
+A clerk named Lindemann formally composed or transcribed Jobst Heinrich Krückeberg's petition onto official paper.
 The Amt also compiled a brief Forestry Report onto the same official paper and forwarded the document to the Cammer
 (central fiscal authority). The phrase *"praes: 30. May 1798"* (short for praesentiert, presented) was written by
-the Amt to indicate the date the document was formally forwarded or submitted to the Cammer.
+the Amt (in the upper right) to indicate the date the document was formally forwarded or submitted to the Cammer.
 
 The Cammer (also located in Bückeburg) officially registered the document on 14 June 1798 (*B. 14. Jun. 1798*),
 assigning it the internal reference number *“Cam: Nr: 662”* and marking it as *“Res Cam”*, meaning it was formally
 filed and entered into the chamber’s registry for further handling. 
 
-These labels were written in the upper-left corner by the Cammer as part of its document tracking process.
-The one-day discrepancy between 29 May (when the petition was composed or recorded at the Amt) and 30 May (when it
-was formally forwarded to the Cammer) reflects the administrative sequence of submission and transfer—not
-necessarily when it was received or reviewed by the Cammer.
+These labels were written in the upper-left corner by the Cammer as part of its document tracking process.  The
+one-day discrepancy between 29 May (when the petition was composed or recorded at the Amt) and 30 May (when it was
+formally forwarded to the Cammer) reflects the administrative sequence of submission and transfer—not necessarily
+when it was received or reviewed by the Cammer.
 
 == Document Components
 
-The larger text is the Forestry Office assesstment regarding the land Jobst Heinrich Krückeberg has
-request to purchase. The text written vertically along the lower left edge is an administrative note.
+The larger texy is the Forestry Office assesstment regarding the land Jobst Heinrich Krückeberg has
+requested to purchase. The text written vertically along the lower left edge is an administrative note.
 The smaller text to the right and below the Forestry Office report is Jobst Heinrich's written petition
-composed by the clerk Lindemann.
+composed by the clerk Lindemann. It continues and concludes on the backside.
  
 === Jobst Heinrich's Request
 
