--- a/modules/1237/pages/image2-full.adoc
+++ b/modules/1237/pages/image2-full.adoc
@@ -3,7 +3,7 @@
 
 == Jobst Heinrich Krückeberg's Petition
 
-The body of the petition begins on the first page of document 1, but it continues on its backside.
+The body of the petition begins on the first page of document #1, but it continues on its backside.
 It is the smaller text seen on the first page. It continues onto the backside of the page.
 
 [cols="1a,1a",frame="none",grid="none"]
@@ -84,7 +84,7 @@ ____
 
 == Transliteration and Translation of Endorsement of the Petition
 
-This text appears at the bottom of the backside of the page below the 2^nd^ half of 
+The text appears at the bottom of the backside of the page below the 2^nd^ half of 
 the petition.
 
 [cols="1a,1a"]
