--- a/modules/1237/pages/image2-header.adoc
+++ b/modules/1237/pages/image2-header.adoc
@@ -6,8 +6,8 @@ The Petition and Forestry Assessment were drawn up by the local governmental adm
 The wrote the text the appears on the left side of the header:
 
 * *"Nr:1"* in the upper left desiginates it as doucment number 1.
-* *"praes: 30. May 1798."* -- "praes:" is short for praesentiert (presented). This was the date is was forwaard
-to the *Vormundlichte Cammer*, the guardianship chamber, a higher, state-level authority.
+* *"praes: 30. May 1798."* -- "praes:" is short for praesentiert (presented). May 30, 1798, was the date document 1
+was forwaard to the *Vormundlichte Cammer*, the guardianship chamber, a higher, state-level authority.
 +
 In smaller German principalities like Schaumburg-Lippe, the *Vormundschaftliche Cammer* typically functioned as a
 kind of higher-level civil authority—combining:
