--- a/modules/1237/pages/image2-header.adoc
+++ b/modules/1237/pages/image2-header.adoc
@@ -2,19 +2,28 @@
 
 image::02-header.png[link=self]
 
-[cols="1a"]
+[cols="1a,1a"]
 |===
-|Transliteration
+|Transliteration|
 
-|
+<|
 [verse]
 ____
-Cam: Nr: 662.                                                 Nr: 1.
+Cam: Nr: 662.
 Res Cam
 
-zum Forstamts Bericht.                                        praes: 30. May 1798.
+zum Forstamts Bericht.
 B. 14. Jun. 1798
             MK
+____
+
+>|
+[verse]
+____
+Nr: 1.
+
+
+praes: 30. May 1798.
 ____
 |===
 
