--- a/modules/1237/pages/image2-header.adoc
+++ b/modules/1237/pages/image2-header.adoc
@@ -2,11 +2,11 @@
 
 image::02-header.png[link=self]
 
-[cols="1l,1l"]
+[cols="1,1"]
 |===
 |Transliteration|Translation 
 
-|
+l|
 ....
 Cam: Nr: 662.                    Nr: 1.
 
@@ -16,7 +16,7 @@ B. 14. Jun. 1798
             MK
 ....
 
-|
+l|
 ....
 Cam: No. 662                                     No. 1.
 Resc[riptum] Cam[merale]
