--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -14,8 +14,8 @@ The report describes:
 * The request from *Jobst Heinrich Krückeberg*, a _Brinksitzer_ (smallholder) residing at No. 10 in Berenbusch, to
 obtain a piece of land to enlarge his garden and farmyard.
 
-* A local objection raised by a *Köter* (an older term for a small cottager with minimal land rights; see sidebar)
-named *Weiland*, also from Berenbusch. 
+* A local objection raised by a *Köter* (an older term for a small cottager with minimal land rights) named
+*Weiland*, also from Berenbusch. 
 
 === Its Official Response
 
