--- a/modules/1237/pages/image3-official-response.adoc
+++ b/modules/1237/pages/image3-official-response.adoc
@@ -1,154 +1,4 @@
-= Land Assignment Report for Jobst Heinrich Krückeberg and Its Official Response
-//:page-role: wide
-
-== Land Assignment Report
-
-This is the Land Assigment Report issued by the issued by the *Ämter Bückeburg und Arensburg* (local
-adminstrative offices of Bückeburg and Arenburg). They are reporting to the *Gräflich vormundschaftliche
-Cammer* (Countly Guardianship Chamber), which was the higher fiscal and administrative authority for
-land and estate matters. 
-
-The response to their report was also written on the left side of this report; however, in this image,
-in the image below it has been removed to improve the readability of the report. The response folows
-follows late below.
-
-=== Land Assignment Report: Key Points
-
-* The request from *Jobst Heinrich Krückeberg*, a _Brinksitzer_ (smallholder) residing at No. 10 in Berenbusch, to obtain a piece of land to enlarge his garden and farmyard.
-
-* A local objection raised by a *Köter* (an older term for a small cottager with minimal land rights; see glossary)
-named *Weiland*, also from Berenbusch, who:
-** Expressed dissatisfaction with the planned assignment.
-** Claimed he himself wanted to acquire the same plot.
-** Argued the land reassignment would restrict his access for transporting crops.
-
-* An assurance from the local authorities (the Ämter Bückeburg and Arensburg) that this access issue would be
-examined more closely during the land survey (_Ausmeßung_), but initial assessment suggested the objection had no
-valid basis.
-
-* _Additional finding_: The actual cause of Weiland’s objection seemed to be that he had *illegally planted willow
-trees* (_Weiden Bäumen_) on the plot in question—i.e. he had already started using it without authorization.
-
-* Final judgment: Since the planting had been done *without permission* (_eigenmächtiger Weise_), this act did not
-constitute a legal claim to the land, and there were *no legitimate grounds* to deny Krückeberg’s requested
-assignment.
-
-image::03-right-page-main-text.png[link=self]
-
-image::04-left-page.png[link=self]
-
-=== Transliteration and Translation of Land Assignment Report
-
-This is the report that accompanied the petition of Jobst Heinrich Krückeberg.
-
-[cols="1a,1a"]
-|===
-|Transliteration|Translation
-
-|
-[verse]
-____
-Cam: N: 53.  pr: 6. Merz 1799       2
-
-2 1.  
-Forst-Sachen  
-
-An  
-Vormundschaftliche Cammer  
-Bericht  
-der Aemter Bückeburg und  
-Arensburg.  
-
-Betr.  
-Ausweisung  
-
-In der Anlage remittiren wir die  
-Vorstellung des Brinksitzers Jobst  
-Henr: Krückeberg N 10 zu Beren-  
-busch mit der Anzeige, daß unter  
-den Einwohnern der Dorfschaften  
-Berenbusch, Nordtholtz und Evesen  
-nur allein der sehr wohl begütherte  
-Köter Weiland et. zu Berenbusch  
-sich als unzufrieden über die vor-  
-habende Ausweisung bezeigt hat.  
-indem er eines Theils selbsten  
-diesen Platz zu überkommen wünscht  
-und andern Theils vorgiebt, daß  
-ihm der Weg zur Einfahrt seiner  
-Früchte zu sehr beengt würde.  
-
-Wir werden bey der Ausmeßung  
-dieses näher beurtheilen und  
-dahin seyn, daß ihm wegen der  
-Einfahrt keine gegründete Be-  
-schwerde übrig bleibt. Vorzüglich 
-veranlaßt ihn die wegzu nehmende
-Bepflanzung dieses Platzes mit
-Weiden Bäumen zum geäußerten
-Wiederspruch [Widerspruch] der also, weil der-
-selbe diesen Platz eigenmächtiger
-Weise bepflanzt hat, nicht vor
-der Art ist, daß deshalb der
-gebethenen Ausweisung nicht zu
-deferire stehe mögte.
-L Buckeburg 27ten Febr.
-1799                   H. Habicht.           Stölting
-____
-|
-[verse]
-____
-Land Assignment Report for Jobst Heinrich Krückeberg, March 6, 1799  
-Chamber No. 53  
-2 1.  
-Forestry Matters  
-
-To  
-Guardianship Chamber  
-Report  
-of the Offices of Bückeburg and  
-Arensburg.  
-
-Re:  
-Land Assignment  
-
-Attached we remit the petition of the smallholder Jobst  
-Henr[ich] Krückeberg No. 10 in Beren-  
-busch along with the report that among  
-the residents of the villages  
-Berenbusch, Nordholz, and Evesen  
-only the very well-to-do  
-Köter (tenant smallholder) Weiland of Berenbusch  
-has expressed dissatisfaction about the  
-proposed assignment,  
-since on the one hand he himself  
-wishes to obtain this plot,  
-and on the other hand claims that  
-his access route for transporting his  
-harvests would be overly restricted.  
-
-We will assess this more closely  
-during the surveying process and  
-be of the opinion that regarding the  
-access route no legitimate  
-objection remains.  
-
-In particular, what prompted his  
-objection is the planting  
-of this plot with willow trees,  
-which he had undertaken on his own  
-initiative. However, this  
-does not constitute  
-a valid reason to refuse  
-the requested assignment.  
-
-Bückeburg, February 27,  
-1799  
-H. Habicht.     Stölting
-____
-|===
-
-== Official Response to Petition and Land Assignment Report
+= Official Response to Petition and Land Assignment Report
 
 The *marginal note* in the image is a response to the remitted xref:image3-land-assignment-report[Land
 Assignment Report], but not a formal reply addressed to Krückeberg. It is an internal instruction,
