--- a/modules/1237/pages/images3-4-report.adoc
+++ b/modules/1237/pages/images3-4-report.adoc
@@ -52,11 +52,8 @@ Cam: N: 53.  pr: 6. Merz 1799           2
 
 Forst-Sachen  
 
-An  
-Vormundschaftliche Cammer  
-Bericht  
-der Aemter Bückeburg und  
-Arensburg.  
+An Vormundschaftliche Cammer Bericht  
+der Aemter Bückeburg und Arensburg.  
 
 Betr.  
 Ausweisung  
@@ -102,11 +99,9 @@ Chamber No. 53                         2
 
 Forestry Matters  
 
-To  
-Guardianship Chamber  
-Report  
-of the Offices of Bückeburg and  
-Arensburg.  
+To Guardianship Chamber  
+
+Report of the Offices of Bückeburg and Arensburg.  
 
 Re:  
 Land Assignment  
