--- a/modules/1237/pages/images3-4-report.adoc
+++ b/modules/1237/pages/images3-4-report.adoc
@@ -48,7 +48,7 @@ This is the report that accompanied the petition of Jobst Heinrich Krückeberg.
 |
 [verse]
 ____
-Cam: N: 53.  pr: 6. Merz 1799           2   
+Cam: N: 53.                pr: 6. Merz 1799           2   
 
 Forst-Sachen  
 
@@ -94,7 +94,7 @@ ____
 |
 [verse]
 ____
-Land Assignment Report for Jobst Heinrich Krückeberg, March 6, 1799  
+Land Assignment Report for Jobst Heinrich Krückeberg, March 6, 1799              2
 Chamber No. 53                         2
 
 Forestry Matters  
