--- a/modules/1237/pages/images3-4-report.adoc
+++ b/modules/1237/pages/images3-4-report.adoc
@@ -95,7 +95,7 @@ ____
 [verse]
 ____
 Land Assignment Report for Jobst Heinrich Krückeberg, March 6, 1799              2
-Chamber No. 53                         2
+Chamber No. 53 
 
 Forestry Matters  
 
