--- a/modules/1237/pages/images3-4-report.adoc
+++ b/modules/1237/pages/images3-4-report.adoc
@@ -94,14 +94,10 @@ ____
 |
 [verse]
 ____
-Land Assignment Report for Jobst Heinrich Krückeberg, March 6, 1799              2
-Chamber No. 53 
-
+Chamber No. 53                fowarded March 6, 1799
 Forestry Matters  
 
-To Guardianship Chamber  
-
-Report of the Offices of Bückeburg and Arensburg.  
+To Guardianship Chamber Report of the Offices of Bückeburg and Arensburg.  
 
 Re:  
 Land Assignment  
