--- a/modules/1237/pages/images3-4-report.adoc
+++ b/modules/1237/pages/images3-4-report.adoc
@@ -97,10 +97,9 @@ ____
 Chamber No. 53                fowarded March 6, 1799
 Forestry Matters  
 
-To Guardianship Chamber Report of the Offices of Bückeburg and Arensburg.  
+Report to the Guardianship Chamber from the Offices of Bückeburg and Arensburg
 
-Re:  
-Land Assignment  
+Re: Land Assignment  
 
 Attached we remit the petition of the smallholder Jobst  
 Henr[ich] Krückeberg No. 10 in Beren-  
